--- a/RWDF_L2_Start/css/main.css
+++ b/RWDF_L2_Start/css/main.css
@@ -18,7 +18,9 @@ h1, h2, h3, h4, h5 {
 header, nav, footer, section, article, div {
   box-sizing: border-box;
 }
-
+* {
+  box-sizing: border-box;
+}
 ul {
   list-style: none;
   padding: 0;
@@ -68,7 +70,7 @@ ul {
 
 .header__title {
   font-weight: 300;
-  font-size: 4em;
+  font-size: 3em;
   margin: 0.5em 0.25em;
   display: inline-block;
   color: #212121;
@@ -161,7 +163,6 @@ main {
   background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
   bottom: 0;
-  height: 40%;
   width: 100%;
   color: #fff;
   padding: 1em;
@@ -270,8 +271,9 @@ main {
  */
 
 .weather {
-  float: right;
-  width: 100%;
+  /*float: right;
+  width: 100%;*/
+  flex-grow: 1;
   padding: 1em;
 }
 
@@ -335,11 +337,11 @@ main {
   margin: 24px 0;
 }
 
-.snippet__thumbnail {
+/*.snippet__thumbnail {
   width: 100px;
   float: left;
   margin-right: 1em;
-}
+}*/
 
 .snippet__title {
   font-weight: 500;
